button align corrected

--- a/src/components/button/index.css
+++ b/src/components/button/index.css
@@ -1,12 +1,3 @@
-.button-container{
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  align-items: center;
-  width: 100%;
-  position: relative;
-  left: 30%;
-}
-
 .button{
   margin: 10px;
   padding-top: 3px;
